test-cases/negative/test_075_function_without_name.lay
# negative test: function declaration without function name
# expected: parser should reject this

define function that takes x and y and returns Number
  return x plus y


